# gemm_performance

./: README.md
cuda_test/: CMakeLists.txt  gemm_kernel.cu  main.cpp
opencl_test/: CMakeLists.txt  gemm_kernel.cl  main.cpp
